discussion/kv_engine/170521/170521_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Create json_validator library

This is currently a wrapper on top of JSON_checker,
and the main purpose of the library is to make it
easy to flip the underlying library without having
to manually update code in a lot of other locations
in order to flip the backend.

Change-Id: I527012ecccfe1cd43c0794361b159f0e7f3c7c29

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-11 08:05:24.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-11 08:29:37.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15512/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:230:16: error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
    return cb::xattr::validate(*validator, view);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/json/syntax_validator_bench.cc:14:10: error: "folly/portability/GTest.h" file not found [clang-diagnostic-error]
#include <folly/portability/GTest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15512/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:230:16:
error: no member named "xattr" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15512/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43818/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0026/0159]: itempager conf...(53 ms) OK


99% tests passed, 1 tests failed out of 421

Total Test time (real) = 685.95 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43818/ )

Timeout of a CTest test 421/421 Test #273: ep_testsuite.full_eviction.comp_active ........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43818/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36948/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/thread.cc:230:16:
error: no member named "xattr" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36948/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17246/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17246/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5160/ : FAILURE

Compile error at [2022-02-11T08:06:34.448Z] ../kv_engine/json/syntax_validator_bench.cc:14:10:
fatal error: "folly/portability/GTest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5160/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14354/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25654/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18288/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17554/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16329/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5221/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
